Fix Corrigido dark mode do conteudo das aulas e spinner

--- a/src/styles.css
+++ b/src/styles.css
@@ -112,6 +112,10 @@ body.dark-mode .mat-radio-button .mat-radio-outer-circle {
   border-color: #a0a0a0;
 }
 
+.dark-mode {
+  color: var(--text-color);
+} 
+
 
 *,
 *::before,
